compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__functions__provide_arg_type_to_fn_not_a_tuple.snap
---
source: compiler-core/src_refactored/__core/type_/tests/functions.rs
assertion_line: 527
expression: "\npub fn main() {\n   let z = \"not a tuple\"\n   fn(x) { x.2 }(z)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
   let z = "not a tuple"
   fn(x) { x.2 }(z)
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:12
  │
4 │    fn(x) { x.2 }(z)
  │            ^ This is not a tuple

To index into this value it needs to be a tuple, however it has this type:

    String
